-p:RepositoryUrl=https://github.com/${{ github.repository }}

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -172,3 +172,4 @@ jobs:
             "./Protoculture.Postgres.Embedded/bin/Release/Protoculture.Postgres.Embedded.*.nupkg" \
             --source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json \
             --api-key "${NUGET_TOKEN}"
+            -p:RepositoryUrl=https://github.com/${{ github.repository }}
