Don't download-artifact

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -106,11 +106,11 @@ jobs:
       - name: "Checkout"
         uses: "actions/checkout@v2"
 
-      - name: "Download Linux X64 Build" 
-        uses: "actions/download-artifact@v2"
-        with:
-          name: "postgres-linux-x64"
-          path: "Protoculture.Postgres.Embedded/postgres"
+#      - name: "Download Linux X64 Build" 
+#        uses: "actions/download-artifact@v2"
+#        with:
+#          name: "postgres-linux-x64"
+#          path: "Protoculture.Postgres.Embedded/postgres"
 
 #      - name: "Download Windows X64 Build"
 #        uses: "actions/download-artifact@v2"
