Don't Show Builds

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -118,8 +118,8 @@ jobs:
 #          name: "postgres-windows-x64"
 #          path: "Protoculture.Postgres.Embedded/postgres"
 
-      - name: "Show Builds"
-        run: "ls -Al ./Protoculture.Postgres.Embedded/postgres/"
+#      - name: "Show Builds"
+#        run: "ls -Al ./Protoculture.Postgres.Embedded/postgres/"
 
       - name: "Setup .NET"
         uses: "actions/setup-dotnet@v1"
